[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/enemies/fast_enemy.gd" id="1_script"]
[ext_resource type="Script" path="res://scripts/core/health_component.gd" id="2_health"]
[ext_resource type="Script" path="res://scripts/core/damage_source.gd" id="3_damage"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.9, 0.4, 0.2, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
height = 1.2
radius = 0.35

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
height = 1.2
radius = 0.35

[sub_resource type="SphereShape3D" id="SphereShape3D_1"]
radius = 0.5

[node name="FastEnemy" type="CharacterBody3D"]
script = ExtResource("1_script")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_1")
material_override = SubResource("StandardMaterial3D_1")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_health")

[node name="DamageSource" type="Area3D" parent="."]
script = ExtResource("3_damage")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageSource"]
shape = SubResource("SphereShape3D_1")
